Fixed the View Externally button which was not showing up earlier

--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,7 @@ em{
     height: 30px;
  }
  
- .anchorButtons{
+ #download-btn{
    background-color: #199319;
    color: white;
    padding: 30px 50px;
